Code screen stretch fix (#6)
* Code Mirror Horizontal Stretch Fix

Makes Code Mirror width and maxWidth the same so it no longer stretches. Instead, a horizontal scroll bar appears with text overflow.

* refix

* we did it

--- a/public/style/codemirror.css
+++ b/public/style/codemirror.css
@@ -4,6 +4,8 @@
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
   height: 300px;
+  width: 500px;
+  max-width: 500px;
   color: black;
   direction: ltr;
   border: 1px solid black; 
